--- a/.github/workflows/full-tests.js.yml
+++ b/.github/workflows/full-tests.js.yml
@@ -7,8 +7,8 @@ on:
   workflow_dispatch:
   release:
     types: ["prereleased"]
-  shedule:
-    - cron: "* 7 ** 1-5"
+  schedule:
+    - cron: "* 7 * * 1-5"
 
 jobs:
   build:
