--- a/.github/workflows/full-tests.js.yml
+++ b/.github/workflows/full-tests.js.yml
@@ -37,7 +37,7 @@ jobs:
     - name: Upload report
       uses: actions/upload-artifact@v3
       with:
-        name: report
+        name: index
         if-no-files-found: error
         path: ./jest-html-report
 
